# shadrosV2

./: Cargo.toml  fix.sh  setup.sh
src/: client_api.rs  connection_dialog.rs  main.rs  network_app_state.rs  server.rs
src/agent/: environment.rs  evasion.rs  generator_helpers.rs  mod.rs  polymorphic.rs  syscalls.rs
src/bof/: coff_loader.rs  integration.rs  mod.rs
src/crypto/: mod.rs
src/gui/: components.rs  mod.rs
src/listener/: mod.rs
src/models/: agent.rs  messages.rs  mod.rs
src/network_app_state/: agents.rs  beacon_console.rs  bof.rs  dashboard.rs  helpers.rs  listeners.rs  mod.rs
src/utils/: mod.rs
