[package]
name = "rust_c2_framework"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2_client"
path = "src/main.rs"

[[bin]]
name = "c2_server"
path = "src/server.rs"

[dependencies]
# GUI dependencies (for client only)
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
rfd = "0.11.0"

# Shared dependencies
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"

# Server-specific dependencies
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "auth"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"